# skeleton_telegram_bot

./: .gitignore  Dockerfile  config.py  docker-compose.yaml  pyproject.toml  start_bot.sh
telegram_bot/: __init__.py  bot.py
telegram_bot/handlers/: __init__.py  command_start.py
telegram_bot/keybords/: __init__.py  start.py
